Fix loading TTF fonts without a family name.

Previously we only had this check for non-TTF fonts.
BUG:500135